fix horizontal overflow caused by hero width

--- a/sass/theme/layout/_hero.scss
+++ b/sass/theme/layout/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-height: 500px;
   background-color: $secondary;
